--- a/Airline/Airline.csproj
+++ b/Airline/Airline.csproj
@@ -16,8 +16,11 @@
         <PackageReference Include="Avalonia" Version="0.6.1" />
         <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.6.1" />
+        <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="4.0.1" />
+        <PackageReference Include="DryIocAttributes.dll" Version="4.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.1" />
         <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.1" />
+        <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
         <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.6.1" />
         <PackageReference Include="Prism.Core" Version="7.0.0.396" />
     </ItemGroup>
