--- a/Prism.DryIoc.Avalonia/Prism.DryIoc.Avalonia.csproj
+++ b/Prism.DryIoc.Avalonia/Prism.DryIoc.Avalonia.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DryIoc" Version="2.12.5" />
+    <PackageReference Include="DryIoc.dll" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
