--- a/Airline/Airline.csproj
+++ b/Airline/Airline.csproj
@@ -13,9 +13,9 @@
         <EmbeddedResource Include="Assets\*" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.6.1" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.6.1" />
+        <PackageReference Include="Avalonia" Version="0.6.2-build5657-beta" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.6.2-build5657-beta" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="0.6.2-build5657-beta" />
         <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="4.0.1" />
         <PackageReference Include="DryIocAttributes.dll" Version="4.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.1" />
