--- a/Prism.Avalonia/Prism.Avalonia.csproj
+++ b/Prism.Avalonia/Prism.Avalonia.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.6.1" />
+    <PackageReference Include="Avalonia" Version="0.6.2-build5657-beta" />
     <PackageReference Include="CommonServiceLocator" Version="2.0.1" />
     <PackageReference Include="Prism.Core" Version="7.0.0.396" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
